canadensis_codegen_rust/tests/compile_pass/canadensis/ZeroVariants.1.0.dsdl

#[canadensis(enum)]

uint2 value

@sealed
