canadensis_codegen_rust/tests/compile_fail/duplicate_values/canadensis/DupliacateValues.1.0.dsdl

#[canadensis(enum)]

uint3 value

uint3 VARIANT_0 = 0
uint3 VARIANT_1 = 1
uint3 VARIANT_1_AGAIN = 1

@sealed
